Добваляет создание и удаление списка, хранение в localstorage

--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -10,7 +10,7 @@
   display: grid;
   grid-template-rows: min-content 1fr min-content;
   align-content: start;
-  background-color: $blue;
+  background-color: #4D5374;
 }
 
 .page main {
