--- a/source/sass/blocks/todo-list.scss
+++ b/source/sass/blocks/todo-list.scss
@@ -1,16 +1,45 @@
 .todo-list {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
     list-style: none;
     font-size: $base-font;
+    padding-bottom: 100px;
 }
 
 .todo-list__item {
-    padding: 10px;
-    margin-bottom: 15px;
-    font-size: 18px;
-    font-weight: bold;
-    background-color: white;
-    color: $black;
-    border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 10px;
+  margin-bottom: 15px;
+  font-size: 18px;
+  font-weight: bold;
+  background-color: $dark-blue;
+  color: $white;
+  border-radius: 10px;
+  border: 3px solid $dark-blue;
+}
+
+
+.todo-list__item_completed {
+  border-color: #43E8FF;
+  text-decoration: line-through;
+  color: #43E8FF;
+}
+
+.todo-list__item-left-wrapper {
+  display: flex;
+  width: 80%;
+}
+
+.todo-list__item-text {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 20px;
+}
+
+.todo-list__complete-btn,
+.todo-list__del-btn {
+  border: none;
+  background: none;
 }
